thumbnail for plots

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -153,11 +153,12 @@ footer {
 
 /************** QTIP ****************/
 
-.qtip-agot2db{min-width:310px;max-width:350px;font-size:15px}
+.qtip-agot2db{min-width:360px;max-width:360px;font-size:15px}
 
 /***************** THUMBNAIL CARD IMAGE **************/
 
 .card-thumbnail{background-attachment:scroll;background-origin:padding-box;background-clip:border-box;background-repeat:no-repeat;margin:0 0 5px 5px;position:relative;border:1px solid #000;float:right}
+.card-thumbnail-plot{margin-top:5px}
 .card-thumbnail-1x{width:200px;height:200px;background-size:300px 418px}
 .card-thumbnail-2x{width:100px;height:100px;background-size:150px 209px}
 .card-thumbnail-3x{width:67px;height:67px;background-size:100px 139px}
@@ -188,6 +189,11 @@ footer {
 .card-thumbnail-3x.card-thumbnail-location{background-position:-27.3px -8.7px}
 .card-thumbnail-4x.card-thumbnail-location{background-position:-20.5px -6.5px}
 .card-thumbnail-5x.card-thumbnail-location{background-position:-16.4px -5.2px}
+.card-thumbnail-1x.card-thumbnail-plot{width:400px;height:100px;background-size:418px 300px;background-position:-9px -25px}
+.card-thumbnail-2x.card-thumbnail-plot{width:200px;height:50px;background-size:209px 150px;background-position:-4.5px -12.5px}
+.card-thumbnail-3x.card-thumbnail-plot{width:133px;height:33px;background-size:139px 100px;background-position:-3px -8.3px}
+.card-thumbnail-4x.card-thumbnail-plot{width:100px;height:25px;background-size:105px 75px;background-position:-2.25px -6.25px}
+.card-thumbnail-5x.card-thumbnail-plot{width:80px;height:20px;background-size:84px 60px;background-position:-1.8px -5px}
 
 /************** INDEX PAGE ***************/
 
