--- a/src/AppBundle/Resources/views/octgn.xml.twig
+++ b/src/AppBundle/Resources/views/octgn.xml.twig
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<deck game="0f38e453-26df-4c04-9d67-6d43de939c77">
-  <section name="Identity">
-    <card qty="1" id="bc0f047c-01b1-427f-a439-d451eda{{ identity.index }}">{{ identity.name }}</card>
-  </section>
-  <section name="R&amp;D / Stack">
-{% for card in rd %}
-    <card qty="{{ card.qty }}" id="bc0f047c-01b1-427f-a439-d451eda{{ card.index }}">{{ card.name }}</card>
-{% endfor %}
-  </section>
-  <notes><![CDATA[{{ description }}]]></notes>
+<deck game="30c200c9-6c98-49a4-a293-106c06295c05" sleeveid="0">
+{{ content|raw }}
+  <notes><![CDATA[]]></notes>
 </deck>
