--- a/src/AppBundle/Resources/views/Builder/table-suggestions.html.twig
+++ b/src/AppBundle/Resources/views/Builder/table-suggestions.html.twig
@@ -1,6 +1,6 @@
 
 <!-- Suggestions -->
-<table class="table table-condensed" id="table-suggestions">
+<table class="table table-condensed" id="table-suggestions" style="display:none">
 <thead>
 <tr><th colspan="6"><span class="fa fa-fast-forward"></span> Card suggestions</th></tr>
 </thead>
