--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -1,14 +1,10 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
-{% block stylesheets %}
-<link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
-{% endblock %}
-
 {% block body %}
 
 <div class="jumbotron">
 <div class="container">
-<h1 class="site-title">agot<span>2</span>db</h1>
+<h1 class="site-title">Thr<span style="position:relative">o<span class="icon icon-power" style="position:absolute;left: .65em;top: 1.2em;font-size: 30%;"></span></span>nesDB</h1>
 <div class="site-slogan">The Only Deckbuilder That Matters</div>
 </div> <!-- .container -->
 </div>
@@ -22,10 +18,10 @@
 {
    "@context": "http://schema.org",
    "@type": "WebSite",
-   "url": "https://agot2db.com/",
+   "url": "https://thronesdb.com/",
    "potentialAction": {
      "@type": "SearchAction",
-     "target": "http://agot2db.com/find/?q={search_term_string}",
+     "target": "http://thronesdb.com/find/?q={search_term_string}",
      "query-input": "required name=search_term_string"
    }
 }
