--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ pagetitle|default('Deckbuilder') }} &middot; agot2db</title>
+    <title>{{ pagetitle|default('Deckbuilder') }} &middot; thronesdb</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
@@ -36,7 +36,7 @@
           <a class="navbar-brand" href="{{ path('index') }}">
             <span class="icon icon-link-half-top"></span>
             <span class="icon icon-link-half-bottom"></span>
-            agot2db
+            thronesdb
           </a>
         </div>
         <div class="navbar-collapse collapse">
@@ -109,7 +109,7 @@
     </p>
 
     <p>
-    Bug reports and Feature Requests on <a href="https://github.com/Alsciende/agot2db/issues">GitHub</a>
+    Bug reports and Feature Requests on <a href="https://github.com/Alsciende/thronesdb/issues">GitHub</a>
     </p>
 
     <p>
