--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -36,7 +36,7 @@
           <a class="navbar-brand" href="{{ path('index') }}">
             <span class="icon icon-link-half-top"></span>
             <span class="icon icon-link-half-bottom"></span>
-            thronesdb
+            ThronesDB
           </a>
         </div>
         <div class="navbar-collapse collapse">
@@ -127,8 +127,8 @@
 
     </div>
     </footer>
-    
-	<!--  card modal -->    
+
+	<!--  card modal -->
 	<div class="modal" id="cardModal" tabindex="-1" role="dialog" aria-labelledby="cardModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -155,7 +155,7 @@
 		</div>
 	</div>
 	<!--  /cardModal -->
-	
+
     <script src="{{ asset('/bundles/fosjsrouting/js/router.js') }}"></script>
     <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
 
