--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -27,25 +27,18 @@
 	</div><!-- /.col-sm-6 -->
 </div><!-- /.row -->
 
-<!-- Search Bar -->
 <div class="row">
+	<!-- Search Bar -->
 	<div class="col-sm-12" style="margin-bottom:10px">
 		<input type="text" class="form-control" id="filter-text" placeholder="Find a card or filter the list" tabindex="1">
 	</div>
-</div>
-<!-- Search Bar -->
-
-<div class="row" style="margin-bottom:10px">
-    <div class="col-md-12 hidden-xs">
-				<div class="btn-group pull-right" data-filter="type_code" data-toggle="buttons"></div>
-        <div class="btn-group" data-filter="faction_code" data-toggle="buttons"></div>
-    </div>
-		<div class="col-xs-12 visible-xs" style="margin-bottom:10px">
-        <div class="btn-group btn-group-justified" data-filter="faction_code" data-toggle="buttons"></div>
-		</div>
-		<div class="col-xs-12 visible-xs">
-				<div class="btn-group btn-group-justified" data-filter="type_code" data-toggle="buttons"></div>
-    </div>
+	<!-- Search Bar -->
+	<div class="col-sm-12" style="margin-bottom:10px">
+      <div class="btn-group btn-group-justified" data-filter="faction_code" data-toggle="buttons"></div>
+	</div>
+	<div class="col-sm-12" style="margin-bottom:10px">
+			<div class="btn-group btn-group-justified" data-filter="type_code" data-toggle="buttons"></div>
+  </div>
 </div>
 
 <!-- Collection Table -->
