--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
 <div class="jumbotron">
 <div class="container">
 <h1 class="site-title">Thr<span style="position:relative">o<span class="icon icon-power" style="position:absolute;left: .65em;top: 1.2em;font-size: 30%;"></span></span>nesDB</h1>
-<div class="site-slogan">The Only Deckbuilder That Matters</div>
+<div class="site-slogan">Deckbuilder for A Game of Thrones LCG 2nd Edition</div>
 </div> <!-- .container -->
 </div>
 
