--- a/src/AppBundle/Resources/views/Search/card-faction.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-faction.html.twig
@@ -1,3 +1,5 @@
+<span class="card-faction">
 {{ card.faction_name }}</span>.
 {% if card.isLoyal %} Loyal.{% endif %}
 {% if card.isLimited %} Limited.{% endif %}
+</span>
